--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,7 @@ nav{width: 100%; position: absolute; top: 0; left: 0;}
 
 /*series*/
 #series{top: 400%;}
-#series .inner{padding: 100px 20px 0; font-family: "Brawler", "Gowun Batang", serif; position: relative; height: 932px;}
+#series .inner{padding: 100px 20px 0; font-family: "Brawler", "Gowun Batang", serif; position: relative;}
 #series .ser-txt h2{font-size: 42px; width: 225px;}
 
 #series .ser-txt .ser-tbox{display: flex; margin: 20px 0;}
