--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,12 @@ nav{width: 100%; position: absolute; top: 0; left: 0;}
 #gift .g-wrap h2{font-size: 42px; width: 220px; margin-bottom: 42px; padding-left: 50px;}
 #gift .gift-swiper img{width: 100%; height: 300px; object-fit: cover;}
 #gift .gift-swiper .swiper-wrapper .swiper-slide p{padding-left: 50px; font-size: 26px; font-weight: bold; margin-bottom: 35px;}
-#gift .gift-swiper .swiper-wrapper .swiper-slide .g-more{width: 150px; border: 1px solid #222; font-family: "Raleway", sans-serif; font-size: 15px; text-align: center; margin-left: 50px;}
+#gift .gift-swiper .swiper-wrapper .swiper-slide .g-more{display: block; width: 130px; border: 1px solid #222; font-family: "Raleway", sans-serif; font-size: 15px; text-align: center; margin: 0 0 50px 50px; padding: 6px 0;}
+#gift .swiper-pagination-progressbar-fill{background-color: #871E25;}
+
+.swiper-horizontal>.swiper-pagination-progressbar, .swiper-pagination-progressbar.swiper-pagination-horizontal, .swiper-pagination-progressbar.swiper-pagination-vertical.swiper-pagination-progressbar-opposite, .swiper-vertical>.swiper-pagination-progressbar.swiper-pagination-progressbar-opposite{position: absolute; left: 50px; width: 110px;}
+
+.swiper-pagination-progressbar{background-color: rgba(135, 30, 37, 0.3)}
 
 
 
