--- a/css/reset.css
+++ b/css/reset.css
@@ -2,13 +2,45 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Brawler:wght@400;700&family=Gowun+Batang:wght@400;700&family=Monsieur+La+Doulaise&family=Noto+Sans+KR:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
-*{margin: 0; padding: 0; box-sizing: border-box;}
-body{font-family: "Gowun Batang", serif; font-weight: normal; line-height: 1.35; font-size: 16px; color: #222; box-sizing: border-box;}
-html, body {height: 100%;}
+*{
+  margin: 0; 
+  padding: 0; 
+  box-sizing: border-box;
+}
 
-ul, ol{list-style: none;}
-a{text-decoration: none; color: #222;}
-img{vertical-align: top; border: 0;}
-input, select{vertical-align: top; outline: none;}
+body{
+  font-family: "Gowun Batang", serif; 
+  font-weight: normal; 
+  line-height: 1.35; 
+  font-size: 16px; 
+  color: #222; 
+  box-sizing: border-box;
+}
 
-.clear{color: transparent; font-size: 0;}
+html, body{
+  height: 100%;
+}
+
+ul, ol{
+  list-style: none;
+}
+
+a{
+  text-decoration: none; 
+  color: #222;
+}
+
+img{
+  vertical-align: top; 
+  border: 0;
+}
+
+input, select{
+  vertical-align: top; 
+  outline: none;
+}
+
+.clear{
+  color: transparent; 
+  font-size: 0;
+}
