1127-프롤로그 페이지

--- a/css/reset.css
+++ b/css/reset.css
@@ -1,5 +1,4 @@
 @charset "utf-8";
-
 @import url('https://fonts.googleapis.com/css2?family=Brawler:wght@400;700&family=Gowun+Batang:wght@400;700&family=Monsieur+La+Doulaise&family=Noto+Sans+KR:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
 *{
@@ -43,4 +42,8 @@ input, select{
 .clear{
   color: transparent; 
   font-size: 0;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
