--- a/css/test.css
+++ b/css/test.css
@@ -1,4 +1,51 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Brawler:wght@400;700&family=Gowun+Batang:wght@400;700&family=Monsieur+La+Doulaise&family=Noto+Sans+KR:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
+*{
+  margin: 0; 
+  padding: 0; 
+  box-sizing: border-box;
+}
+
+body{
+  font-family: "Gowun Batang", serif; 
+  font-weight: normal; 
+  line-height: 1.35; 
+  font-size: 16px; 
+  color: #222; 
+  box-sizing: border-box;
+}
+
+html, body{
+  height: 100%;
+}
+
+ul, ol{
+  list-style: none;
+}
+
+a{
+  text-decoration: none; 
+  color: #222;
+}
+
+img{
+  vertical-align: top; 
+  border: 0;
+}
+
+input, select{
+  vertical-align: top; 
+  outline: none;
+}
+
+.clear{
+  color: transparent; 
+  font-size: 0;
+}
+
+
+
 #wrap{
   min-width: 320px;
 }
@@ -1115,20 +1162,14 @@ footer .sub-txt-img img{
 
 
   /*prologue*/
-  .upper-container h2{
-    font-size: 150px;
+  #prologue .pr-txt h2{
+    font-size: 100px;
   }
-  
-  .tit{
-    font-size: 30px;
+  #prologue .pr-txt p{
+    font-size: 70px;
   }
-  
-  .sub01 {
-    font-size: 14px;
-  }
-  
-  .sub02 {
-    font-size: 14px;
+  #prologue .pr-txt span{
+    font-size: 25px;
   }
 
 
@@ -1256,13 +1297,13 @@ footer .sub-txt-img img{
 
   #shop .swiper .swiper-button-prev{
     background: url(../img/icon_prev.png) no-repeat center left / cover;
-     width: 120px;
-     height: 50px;
+     width: 130px;
+     height: 60px;
   }
   #shop .swiper .swiper-button-next{
     background: url(../img/icon_next.png) no-repeat center right / cover;
-     width: 120px;
-     height: 50px;
+     width: 130px;
+     height: 60px;
   }
 
   /*series*/
@@ -1398,13 +1439,13 @@ footer .sub-txt-img img{
   .swiper-button-prev{
     width: 100px;
     height: 45px;
-    top: 35%;
+    top: 65%;
   }
 
   .swiper-button-next{
     width: 100px;
     height: 45px;
-    top: 39%;
+    top: 67%;
   }
 
   footer .inner{
